--- a/events/templates/booked_event.html
+++ b/events/templates/booked_event.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+<link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
 
 {% block title %}My Booked Events{% endblock %}
 
