--- a/events/templates/events/layout/base.html
+++ b/events/templates/events/layout/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Event Management System{% endblock %}</title>
+    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -24,4 +25,3 @@
         {% block content %}{% endblock %}
     </div>
 </body>
-</html>
