--- a/events/templates/events/layout/login.html
+++ b/events/templates/events/layout/login.html
@@ -1,5 +1,6 @@
 <form method="post">
     {% csrf_token %}
+    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
     <button type="submit">Login</button>
