--- a/events/templates/events/layout/profile.html
+++ b/events/templates/events/layout/profile.html
@@ -1,4 +1,5 @@
 <form method="post">
+    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
     {% csrf_token %}
     {{ profile_form.as_p }}
     <button type="submit">Update Profile</button>
