--- a/events/templates/events/layout/register.html
+++ b/events/templates/events/layout/register.html
@@ -1,4 +1,5 @@
 <form method="post">
+    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Register</button>
